fix(fabric-mod): update camera, particle and level mappings to official 1.21.11 specs and fix Java 21 FFM allocateUtf8String